--- a/IoT-pub.html
+++ b/IoT-pub.html
@@ -47,11 +47,11 @@
 	            var clientID = 'webapp:' + new Date().getTime(); //needs to be unique
 	            device = AwsIot.device({
 	                clientId: clientID,
-	                host: 'a2a4ziueyywvoe-ats-ats.iot.us-east-1.amazonaws.com', //can be queried using 'aws iot describe-endpoint'
+	                host: '[replaceme]-ats.iot.us-east-1.amazonaws.com', //can be queried using 'aws iot describe-endpoint'
 	                protocol: 'wss',
 									// hardcode accesskey/secret - never do it in your account.
-	                accessKeyId: '****',
-	                secretKey: '****',
+	                accessKeyId: '[replaceme]',
+	                secretKey: '[replaceme]',
 	            });
 	            device.on('connect', function () {
 	                console.log("connected");
